[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adl-backend"
version = "0.0.1"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Katia Esposito", email = "katia@linux.com"},
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "orjson>=3.9.0",
    "zstandard>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
adsblol-collector = "app:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "app.py",
    "README.md",
    "LICENSE"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests", "."]
asyncio_mode = "auto"
python_files = ["test_*.py"]
